[package]
description = "Soroban standard token contract"
edition = "2021"
name = "soroban-token-contract"
rust-version = "1.74.0"
version = "0.0.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
flux-rs = { git = "https://github.com/flux-rs/flux" }
soroban-sdk = { git = "https://github.com/flux-rs/rs-soroban-sdk", branch = "demo" }
soroban-token-sdk = { git = "https://github.com/flux-rs/rs-soroban-sdk", branch = "demo" }

[dev_dependencies.soroban-sdk]
branch = "demo"
features = ["testutils"]
git = "https://github.com/flux-rs/rs-soroban-sdk"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
debug-assertions = true
inherits = "release"

[lints.rust]
dead_code = "allow"

[package.metadata.flux]
enabled = true
